# HasTEEProcedureCall

./: .gitignore  CHANGELOG.md  CaseE.hs  HasTEEProcedureCall.cabal  LICENSE  flake.nix
app/: Binny.hs  Main.hs  RPC.hs  Step1.hs  Step2.hs  Step3.hs  Step4.hs  Step5.hs  Step6.hs
slide/: plan.md
