cabal-version:      3.0
name:               HasTEEProcedureCall
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Samuel Hammersberg
maintainer:         samuel@loafey.se
-- copyright:
category:           Concurrency
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    -- other-extensions:
    build-depends:    base >=4.18.2.0
    hs-source-dirs:   lib
    default-language: GHC2021

executable HasTEEProcedureCall
    import:           warnings
    main-is:          Main.hs
    other-modules: Binny, RPC
    -- other-extensions:
    build-depends:
        base >=4.18.2.0,
        HasTEEProcedureCall,
        network-run,
        network,
        bytestring,
        generic-deriving,
        template-haskell

    hs-source-dirs:   app
    default-language: GHC2021
